--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: OccDeser 2287109950@qq.com
+ * @Date: 2022-06-24 22:58:27
+ * @LastEditTime: 2022-06-26 00:35:00
+ * @FilePath: /strongbox/public/index.html
+ * @Description: 
+ * @Encoding: UTF-8
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Strong Box</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
